--- a/view/issue_note.html
+++ b/view/issue_note.html
@@ -1,4 +1,4 @@
-<div>
+<div class="{{issue.data.status}}">
   <div ng-show="issue.source.img" class="connectors">
     <a ng-show="issue.data.url" title="{{ issue }}"
        href="{{ issue.data.url }}" target="_self">
@@ -19,6 +19,9 @@
     </p>
     <p title="{{ issue.data.title }}">
       {{ issue.data.title }}
+    </p>
+    <p title="{{ issue.data.status }}">
+       Status: {{ issue.data.status }}
     </p>
 
     <p ng-if="issue.bottomLeft" class="bottomLeft">
