--- a/view/issue_note.html
+++ b/view/issue_note.html
@@ -27,8 +27,8 @@
     <p ng-if="issue.data.prio" title="Priority: {{ issue.data.prio }}" class="prio">
       {{ issue.data.prio }}
     </p>
-    <p ng-if="issue.subissues.length !== 0" title="Sub-issues: / {{ issue.subissues.length }}" class="subtasks">
-      Sub-issues: / {{ issue.subissues.length }}
+    <p ng-if="issue.subissues.length !== 0" title="Sub-issues: {{ issue.data.subissuesDone }} / {{ issue.subissues.length }}" class="subtasks">
+      Sub-issues: {{ issue.data.subissuesDone }} / {{ issue.subissues.length }}
     </p>
   </div>
 </div>
