Renamed subissues view class. See RM #33567

--- a/view/issue_note.html
+++ b/view/issue_note.html
@@ -30,7 +30,7 @@
     <p ng-if="issue.data.prio" title="Priority: {{ issue.data.prio }}" class="prio">
       {{ issue.data.prio }}
     </p>
-    <p ng-if="issue.subissues.length !== 0" title="Sub-issues: {{ issue.data.subissuesDone }} / {{ issue.subissues.length }}" class="subtasks">
+    <p ng-if="issue.subissues.length !== 0" title="Sub-issues: {{ issue.data.subissuesDone }} / {{ issue.subissues.length }}" class="subissues">
       Sub-issues: {{ issue.data.subissuesDone }} / {{ issue.subissues.length }}
     </p>
   </div>
