--- a/view/issue_note.html
+++ b/view/issue_note.html
@@ -17,8 +17,8 @@
     <p ng-if="issue.data.size" class="issue_size" title="Size: {{ issue.data.size }}">
       {{ issue.data.size }}
     </p>
-    <p title="{{ issue.data.id }}" style="bold">
-      <b> # {{ issue.data.id }} </b>
+    <p class="issueId" title="{{ issue.data.id }}">
+      #{{ issue.data.id }}
     </p>
     <p title="{{ issue.data.title }}">
       {{ issue.data.title }}
